# miniray

./: .pre-commit-config.yaml  Dockerfile.ci  README.md  __init__.py  docker-compose.ci.yml  executor.py  protocol.py  pyproject.toml  setup_isolation.sh  show_blocked_jobs.sh  show_jobs.py  show_queue_size.py  show_suspended.sh  show_working.py  start_worker.sh  test_integration.py  test_protocol.py  wipe_queues.sh  worker.py
.github/workflows/: test.yaml
lib/: cgroup.py  helpers.py  landlock.py  resource_manager.py  sig_term_handler.py  statsd_helpers.py  system_helpers.py  task_sandbox.py  triton_helpers.py  uv.py  worker_helpers.py  worker_task.py
tests/: dstate_helpers.py  run_tests.sh  test_local_executor.py  test_miniray.py  test_worker.py
