[project]
name = "miniray"
version = "0.1.0"
description = "Distributed task execution framework"
requires-python = ">=3.11"
dependencies = [
    "redis>=4.0.0",
    "cloudpickle>=2.0.0",
    "tqdm>=4.60.0",
    "lru-dict>=1.1.0",
    "numpy>=1.20.0",
    "tritonclient[http]>=2.30.0",
    "nvidia-ml-py",
    "tenacity",
    "statsd",
    "wrapt",
    "pytest>=7.0.0",
]

[project.optional-dependencies]
testing = [
    "pre-commit",
    "pytest-xdist>=3.0.0",
    "ruff",
    "ty",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
lint.select = ["E", "F", "W", "PIE", "C4", "ISC", "RUF100", "A", "B", "TID251"]
lint.ignore = ["E701"]
line-length = 160
target-version="py310"
exclude = ["miniray"]

[tool.ty.src]
exclude = ["miniray"]
