[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "miniray"
version = "0.1.0"
description = "Distributed task execution framework"
requires-python = ">=3.12"
dependencies = [
    "redis>=7.3.0,<8",
    "cloudpickle>=2.0.0",
    "tqdm>=4.60.0",
    "lru-dict>=1.1.0",
    "numpy>=1.20.0",
    "tritonclient[http]>=2.30.0",
    "nvidia-ml-py",
    "tenacity",
    "statsd",
    "wrapt",
    "pytest>=7.0.0",
]

[project.optional-dependencies]
testing = [
    "pre-commit",
    "pytest-xdist>=3.0.0",
    "ruff",
    "ty",
]

[tool.hatch.build.targets.wheel]
only-include = [
  "miniray/__init__.py",
  "miniray/executor.py",
  "miniray/worker.py",
  "miniray/lib",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
lint.select = ["A", "B", "E", "F", "N", "W", "PIE", "C4", "ISC", "RUF100", "PTH", "TID251", "SLF"]
lint.ignore = ["E701"]
line-length = 160
target-version="py312"
exclude = ["miniray"]

[tool.ty.src]
exclude = ["miniray"]
